# ImageProcessingService

./: README.md
src/: CMakeLists.txt  preconfig_clang.sh  preconfig_gcc.sh
src/ias/: CMakeLists.txt
src/ias/include/ias/: Analysis.h  MaskC1.h
src/ias/main/: CMakeLists.txt  ias.cpp
src/ias/main/test/: testIO.sh  testPerimeter.sh  testRegion.sh
src/ias/src/: Analysis.cpp  CMakeLists.txt  MaskC1.cpp
src/ias/test/: Analysis_test.cpp  CMakeLists.txt  MaskC1_test.cpp  main.cpp  runTests.sh
